--- a/index.html
+++ b/index.html
@@ -249,10 +249,10 @@
   </template>
 
   <script src="js/utils.js"></script>
-  <script src="js/data.js"></script>
-  <script src="js/pin.js"></script>
-  <script src="js/card.js"></script>
-  <script src="js/form.js"></script>
-  <script src="js/map.js"></script>
+  <script src="js/apartments-data.js"></script>
+  <script src="js/map-pins.js"></script>
+  <script src="js/apartment-card.js"></script>
+  <script src="js/ad-form.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
