Личный проект: модуляция (часть 2)

--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
   <script src="js/map-pins.js"></script>
   <script src="js/apartment-card.js"></script>
   <script src="js/ad-form.js"></script>
+  <script src="js/main-pin-move.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
