Личный проект: надо подкачаться (часть 1)

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
   </template>
 
   <script src="js/utils.js"></script>
-  <script src="js/apartments-data.js"></script>
+  <script src="js/backend.js"></script>
   <script src="js/map-pins.js"></script>
   <script src="js/apartment-card.js"></script>
   <script src="js/ad-form.js"></script>
