--- a/index.html
+++ b/index.html
@@ -250,8 +250,9 @@
 
   <script src="js/utils.js"></script>
   <script src="js/backend.js"></script>
-  <script src="js/apartment-card.js"></script>
   <script src="js/map-pins.js"></script>
+  <script src="js/map-pins-filter.js"></script>
+  <script src="js/apartment-card.js"></script>
   <script src="js/ad-form.js"></script>
   <script src="js/main-pin-move.js"></script>
   <script src="js/main.js"></script>
